index animation 360 & alignment has been fixed

--- a/animation.css
+++ b/animation.css
@@ -48,6 +48,7 @@ body .wrapper .container .dot {
   position: absolute;
   opacity: 0;
   transition: top 2s ease-in-out, left 2s ease-in-out, opacity 2s ease-in-out;
+  font-size: 70%!important;
 }
 
 @keyframes pulse {
